# Uncooked

./: .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  test
LDD3Examples/: README
LDD3Examples/Debug/: makefile  sources.mk
LDD3Examples/Debug/lddbus/: subdir.mk
LDD3Examples/Debug/misc-modules/: subdir.mk
LDD3Examples/Debug/misc-progs/: subdir.mk
LDD3Examples/Debug/pci/: subdir.mk
LDD3Examples/Debug/sbull/: subdir.mk
LDD3Examples/misc-progs/: load50  mapcmp  mapper  polltest
LDD3Examples/sbull/: Makefile  sbull.c
LDD3Examples/scull/: .access.o.cmd  .main.o.cmd  .pipe.o.cmd  .scull.ko.cmd  .scull.mod.o.cmd  .scull.o.cmd  README  access.c  main.c  modules.order  pipe.c  scull.h  scull.ko  scull.mod.c
LDD3Examples/usb/: usb-skeleton.c
Virtio-serial-askisi/sgerag_virtio_crypto/: README  virtio-crypto.c
Virtio-serial-askisi/socket-client/: Makefile  Makefile.am  Makefile.am~  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.scan  configure.scan~  dummy-server  dummy-server.c  dummy-server.c~  forkpty.c  forkpty.c~  main  main.c  main.c~  out  output  socket-client.kdev4  test  test.c
autom4te.cache/: output.0  output.1  traces.0  traces.1  traces.2
cryptodev-linux/: .kdev_include_paths  cryptodev-linux.kdev4
cryptodev-linux/.kdev4/: cryptodev-linux.kdev4
cryptodev-linux/nbproject/: Package-Default.bash  configurations.xml  project.xml
cryptodev_demos/: .kdev_include_paths  AUTHORS  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  config.h  config.h.in  config.status  configure  configure.ac  cryptodev_demo  cryptodev_demos  cryptodev_demos.kdev4  main.cpp  main.cpp~
cryptodev_demos/.kdev4/: _custom.kdev4  cryptodev_demos.kdev4
cryptodev_demos/autom4te.cache/: output.1  requests  traces.0  traces.1
cryptodev_demos/nbproject/: Package-Default.bash  configurations.xml  project.xml
sbull/: Makefile  sbull.c
sdd-1.52/: AN-1.31  AN-1.52  README  README.linux  Targetdirs
sdd-1.52/RULES/: MKLINKS  mk-gmake.id
sdd-1.52/conf/: config.cache  config.status  xconfig.h
sdd-1.52/inc/: avoffset.c~
sdd-1.52/include/: schily.h~
sdd-1.52/librmt/: remote.c  rmtopen.3
sdd-1.52/libschily/: Targets
sdd-1.52/sdd/: Makefile  sdd.c
(+106 files in other folders)
